# cosmwasm-evm

./: .gitignore  Cargo.toml  flake.nix
schema/: cosmwasm-evm.json
schema/raw/: execute.json  instantiate.json
src/: contract.rs  evm.rs  lib.rs  msg.rs  state.rs
